<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

    <!-- Back Button and Title -->
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_buttonSetting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_back_foreground"
            app:tint="@color/text_color_primary" />

        <TextView
            android:id="@+id/music_settings_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/music_settings"
            android:textColor="@color/text_color_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!-- Language Selection Section -->
    <TextView
        android:id="@+id/language_selection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/language_selection"
        android:textColor="@color/text_color_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout" />

    <LinearLayout
        android:id="@+id/language_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_selection_title">

        <CheckBox
            android:id="@+id/checkbox_azerbaijani"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/azerbaijani"
            android:textColor="@color/text_color_primary" />

        <CheckBox
            android:id="@+id/checkbox_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@color/text_color_primary" />
    </LinearLayout>

    <!-- Theme Selection Section -->
    <TextView
        android:id="@+id/theme_selection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/theme_selection"
        android:textColor="@color/text_color_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_selection" />

    <LinearLayout
        android:id="@+id/theme_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_selection_title">

        <CheckBox
            android:id="@+id/checkbox_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/light_mode"
            android:textColor="@color/text_color_primary" />

        <CheckBox
            android:id="@+id/checkbox_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:textColor="@color/text_color_primary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
