<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

    <!-- Profil Şəkili və ProgressBar -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/circle_background1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/profileImage1"
        app:layout_constraintEnd_toEndOf="@id/profileImage1"
        app:layout_constraintStart_toStartOf="@id/profileImage1"
        app:layout_constraintTop_toTopOf="@id/profileImage1" />

    <!-- Ad və Edit düyməsi -->
    <TextView
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Name_and_Surname"
        android:textColor="@color/text_color_primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/dark_color"
        android:text="@string/Edit_profile"
        android:textColor="@color/write_color"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editName" />

    <!-- Bölmələr -->
    <TextView
        android:id="@+id/languageSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:text="@string/language"
        android:textColor="@color/text_color_primary"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEditProfile" />

    <TextView
        android:id="@+id/themeSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:text="@string/theme"
        android:textColor="@color/text_color_primary"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageSection" />

    <TextView
        android:id="@+id/aboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_info"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:text="@string/about_app"
        android:textColor="@color/text_color_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themeSection" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:text="@string/logout"
        android:textColor="@color/text_color_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutApp" />

</androidx.constraintlayout.widget.ConstraintLayout>
