<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:layout_marginTop="88dp"
            android:text="@string/welcome"
            android:textColor="@color/text_color_primary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/please"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:text="@string/please_fill_fields"
            android:textColor="@color/text_color_primary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <TextView
            android:id="@+id/E_poçt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:text="@string/email"
            android:textColor="@color/text_color_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/TextInputLayoutEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Şifrə"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:text="@string/password"
            android:textColor="@color/text_color_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/TextInputLayoutPassword"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="16.5dp"
            android:hint="@string/email_hint"
            android:textColorHint="@color/text_color_primary"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/text_color_primary"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/text_color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/please"
            app:passwordToggleTint="@color/text_color_primary"
            app:placeholderText="test@example.com">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_color_primary"
                android:textColorHint="@color/text_color_primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16.5dp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/text_color_primary"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/text_color_primary"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/text_color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextInputLayoutEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/text_color_primary"
            app:placeholderText="********">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSend"
                android:inputType="textMultiLine|textPassword"
                android:textColor="@color/text_color_primary"
                android:textColorHint="@color/text_color_primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/button_SingIn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_SingIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15.5dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15.5dp"
            android:backgroundTint="@color/primary_color"
            android:padding="13dp"
            android:text="@string/login"
            android:textColor="@color/text_color_secondary"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextInputLayoutPassword" />

        <LinearLayout
            android:id="@+id/orAndSeparator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/button_SingIn">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/text_color_primary" />

            <TextView
                android:id="@+id/orAnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/text_color_primary" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15.5dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="15.5dp"
            android:backgroundTint="@color/text_color_secondary"
            android:clickable="true"
            android:focusable="true"
            android:padding="13dp"
            android:text="@string/continue_with_google"
            android:textColor="@color/text_color_primary"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/google_logo"
            app:iconGravity="textStart"
            app:iconPadding="12dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orAndSeparator"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_apple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15.5dp"
            android:backgroundTint="@color/text_color_secondary"
            android:clickable="true"
            android:focusable="true"
            android:padding="13dp"
            android:text="@string/continue_with_apple"
            android:textColor="@color/text_color_primary"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_apple_foreground"
            app:iconGravity="textStart"
            app:iconPadding="12dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_google"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_apple">

            <TextView
                android:id="@+id/haveAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/primary_color"
                android:textSize="14sp" />
        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="15.5dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="15.5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>